--- a/ltt/templates/home.html
+++ b/ltt/templates/home.html
@@ -24,7 +24,7 @@
                     <div class="card-body">
                       <p class="card-text">Item name : {{item.item_name}}</p>
                       <p class="card-text">Item price: ${{item.item_price}}</p>
-                      <a href="" class = "btn btn-primary">view</a>   
+                      <a href="/itempage/{{item.id}}" class = "btn btn-primary">view</a>   
                     </div>
                 </div>
             </div>
