--- a/ltt/templates/item.html
+++ b/ltt/templates/item.html
@@ -1,7 +1,19 @@
 {% extends "base.html" %}
 {%block title%} {{item_to_show.item_name}} {% endblock %}
 
+
+
+
 {% block contend %}
+{% with messages = get_flashed_messages() %}
+  {% if messages %}
+    <ul class=flashes>
+    {% for message in messages %}
+      <li>{{ message }}</li>
+    {% endfor %}
+    </ul>
+  {% endif %}
+{% endwith %}
 
 <figure class="figure">
     <img src="/static/pics/{{item_to_show.item_image}}" class="figure-img img-fluid rounded" alt="...">
