--- a/ltt/templates/item.html
+++ b/ltt/templates/item.html
@@ -21,6 +21,29 @@
 </figure>
 
 
+<h1>Rating</h1>
+{% if item_to_show.rate_count == 0   %}
+    <p>0.0</p>
+{% else %}
+    {% set rate = item_to_show.rate_acc/item_to_show.rate_count %}
+    <p>{{rate}}</p>
+{% endif %}
+<div class = "container">
+    <form method="POST" class = "form-register">
+        {{rform.hidden_tag()}}
+
+        {{ rform.rate.label() }}
+        {{ rform.rate(class="form-control")}}
+
+        {{ rform.submit(class="btn btn-lg btn-block btn-primary mt-2")}}
+    </form>
+</div>
+
+
+
+
+
+
 <h1>Comment</h1>
 <div class = "container">
     <form method="POST" class = "form-register">
