Purchase function, gives warning if not enough $$

--- a/ltt/templates/deposit.html
+++ b/ltt/templates/deposit.html
@@ -3,7 +3,7 @@
 
 {% block contend %}
 
-<h1>Add fundsr</h1>
+<h1>Add funds</h1>
 <div class = "container">
     <form method="POST" class = "form-register">
         {{form.hidden_tag()}}
