--- a/ltt/templates/base.html
+++ b/ltt/templates/base.html
@@ -16,9 +16,12 @@
               </button>
               <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
                 <div class="navbar-nav">
-                  <a class="nav-link active" aria-current="page" href="#">Home</a>
+                  <a class="nav-link active" aria-current="page" href="/home">Home</a>
                   <a class="nav-link" href="#">Features</a>
                   <a class="nav-link" href="#">Pricing</a>
+                  <a class="nav-link" href="/login">Login</a>
+                  <a class="nav-link" href="/register">Register</a>
+                  <a class="nav-link" href="/deposit">Deposit</a>
                   <a class="nav-link disabled">Disabled</a>
                 </div>
               </div>
