--- a/ltt/templates/base.html
+++ b/ltt/templates/base.html
@@ -10,7 +10,7 @@
     <body>
         <nav class="navbar navbar-expand-lg bg-body-tertiary bg-dark"  data-bs-theme="dark">
             <div class="container-fluid">
-              <a class="navbar-brand" href="#">Navbar</a>
+              <a class="navbar-brand" href="#">Computer Store</a>
               <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
               </button>
@@ -23,6 +23,9 @@
                   <a class="nav-link" href="/register">Register</a>
                   <a class="nav-link" href="/deposit">Deposit</a>
                   <a class="nav-link disabled">Disabled</a>
+                  {%if current_user.userType == "Employee"%}
+                    <a class="nav-link" href = /additems>Add Items</a>
+                  {%endif%}
                 </div>
               </div>
             </div>
