--- a/ltt/templates/register.html
+++ b/ltt/templates/register.html
@@ -12,6 +12,9 @@
 
         {{form.password_.label()}}
         {{form.password_(class="form-control", placeholder = "Password" )}}
+
+        {{form.userType_.label()}}
+        {{form.userType_(class="form-control", placeholder = "Password" )}}
         
         {{form.submit (class="btn btn-lg btn-block btn-primary mt-2")}}
     </form>
