--- a/ltt/templates/base.html
+++ b/ltt/templates/base.html
@@ -19,15 +19,26 @@
                   <a class="nav-link active" aria-current="page" href="/home">Home</a>
                   <a class="nav-link" href="#">Features</a>
                   <a class="nav-link" href="#">Pricing</a>
-                  <a class="nav-link" href="/login">Login</a>
-                  <a class="nav-link" href="/register">Register</a>
-                  <a class="nav-link" href="/deposit">Deposit</a>
-                  <a class="nav-link disabled">Disabled</a>
+                  {%if current_user.is_active == False%}
+                    <a class="nav-link" href="/login">Login</a>
+                    <a class="nav-link" href="/register">Register</a>
+                  {%endif%}
+                  {%if current_user.userType == "Customer"%}
+                    <a class="nav-link" href="/deposit">Deposit</a>
+                  {%endif%}
+                  {%if current_user.is_active%}
+                    <a class="nav-link" href="/logout">Logout</a>
+                  {%endif%}
                   {%if current_user.userType == "Employee"%}
                     <a class="nav-link" href = /additems>Add Items</a>
                   {%endif%}
+                  <a class="nav-link disabled">Disabled</a>
+
                 </div>
               </div>
+              {%if current_user.is_active%}
+                <a class="navbar-brand"> {%print "Logged in as "%}{% print current_user.username ,": ", current_user.userType %} </a>
+              {%endif%}
             </div>
         </nav>
         {% block contend %}
