--- a/ltt/templates/base.html
+++ b/ltt/templates/base.html
@@ -37,7 +37,7 @@
                 </div>
               </div>
               {%if current_user.is_active%}
-                <a class="navbar-brand"> {%print "Logged in as "%}{% print current_user.username ,": ", current_user.userType %} </a>
+                <a class="navbar-brand"> {%print "Logged in as "%}{% print current_user.username ,": ", current_user.userType , "balance: ",current_user.balance %} </a>
               {%endif%}
             </div>
         </nav>
