--- a/ltt/templates/login.html
+++ b/ltt/templates/login.html
@@ -3,6 +3,18 @@
 
 {% block contend %}
 
+{% with messages = get_flashed_messages() %}
+  {% if messages %}
+    <ul class=flashes>
+    {% for message in messages %}
+      <li>{{ message }}</li>
+    {% endfor %}
+    </ul>
+  {% endif %}
+{% endwith %}
+
+
+
 <h1>Login</h1>
 <div class = "container">
     <form method="POST" class = "form-singin">
