--- a/ltt/templates/base.html
+++ b/ltt/templates/base.html
@@ -31,6 +31,7 @@
                   {%endif%}
                   {%if current_user.userType == "Employee"%}
                     <a class="nav-link" href = /additems>Add Items</a>
+                    <a class="nav-link" href = /applications>Applications</a>
                   {%endif%}
                   <a class="nav-link disabled">Disabled</a>
 
