--- a/ltt/templates/base.html
+++ b/ltt/templates/base.html
@@ -33,6 +33,9 @@
                     <a class="nav-link" href = /additems>Add Items</a>
                     <a class="nav-link" href = /applications>Applications</a>
                   {%endif%}
+                  {%if current_user.userType == "Employee"%}
+                  <a class="nav-link" href = /messages>Messages</a>
+                  {%endif%}
                   <a class="nav-link disabled">Disabled</a>
 
                 </div>
