--- a/ltt/templates/base.html
+++ b/ltt/templates/base.html
@@ -37,7 +37,9 @@
                   <a class="nav-link" href = /messages>Messages</a>
                   {%endif%}
                   <a class="nav-link disabled">Disabled</a>
-
+                  {%if current_user.userType == "Customer"%}
+                    <a class="nav-link" href = /inquiry>Open Inquiry</a>
+                  {%endif%}
                 </div>
               </div>
               {%if current_user.is_active%}
