--- a/ltt/templates/base.html
+++ b/ltt/templates/base.html
@@ -40,6 +40,7 @@
                   {%if current_user.userType == "Customer"%}
                     <a class="nav-link" href = /inquiry>Open Inquiry</a>
                   {%endif%}
+                  <a class="nav-link" href = /inquirypage>Current Inquiries</a>
                 </div>
               </div>
               {%if current_user.is_active%}
