--- a/ltt/templates/setPC.html
+++ b/ltt/templates/setPC.html
@@ -28,9 +28,26 @@
         </form>
     </div>
 {%else%}
-    <div class = "container">   
-        <h1>YOU DONT HAVE PERMISSION TO ADD PC </h1>  
-    </div>
+<h1>buy customized PC</h1>
+<div class = "container">
+    <form method="POST" class = "form-register">
+        {{form.hidden_tag()}}   
+
+        {{ form.CPU.label() }}
+        {{ form.CPU(class="form-control")}}
+
+        {{ form.GPU.label() }}
+        {{ form.GPU(class="form-control")}}
+
+        {{ form.MB.label() }}
+        {{ form.MB(class="form-control")}}
+
+        {{ form.RAM.label() }}
+        {{ form.RAM(class="form-control")}}
+
+        {{form.submit(class="btn btn-lg btn-block btn-primary mt-2")}}
+    </form>
+</div>
 {%endif%}
 
 {% endblock %}
