--- a/ltt/templates/setPC.html
+++ b/ltt/templates/setPC.html
@@ -1,6 +1,18 @@
 {% extends "base.html" %}
 {%block title%} Bulid {% endblock %}
 
+{% with messages = get_flashed_messages() %}
+  {% if messages %}
+    <ul class=flashes>
+    {% for message in messages %}
+      <li>{{ message }}</li>
+    {% endfor %}
+    </ul>
+  {% endif %}
+{% endwith %}
+
+
+
 {% block contend %}
 {%if current_user.userType == "Employee"%} 
     <h1>Add PC</h1>
@@ -28,26 +40,6 @@
         </form>
     </div>
 {%else%}
-<h1>buy customized PC</h1>
-<div class = "container">
-    <form method="POST" class = "form-register">
-        {{form.hidden_tag()}}   
-
-        {{ form.CPU.label() }}
-        {{ form.CPU(class="form-control")}}
-
-        {{ form.GPU.label() }}
-        {{ form.GPU(class="form-control")}}
-
-        {{ form.MB.label() }}
-        {{ form.MB(class="form-control")}}
-
-        {{ form.RAM.label() }}
-        {{ form.RAM(class="form-control")}}
-
-        {{form.submit(class="btn btn-lg btn-block btn-primary mt-2")}}
-    </form>
-</div>
+    <p>you are not staff</p>
 {%endif%}
-
 {% endblock %}
