--- a/ltt/templates/base.html
+++ b/ltt/templates/base.html
@@ -41,7 +41,9 @@
                   {%if current_user.userType == "Customer"%}
                     <a class="nav-link" href = /inquiry>Open Inquiry</a>
                   {%endif%}
-                  <a class="nav-link" href = /inquirypage>Current Inquiries</a>
+                  {%if current_user.userType == "Employee"%}
+                  <a class="nav-link" href = /inquiry>Answer Inquiry</a>
+                  {%endif%}
                 </div>
               </div>
               {%if current_user.is_active%}
