--- a/ltt/templates/inquiry.html
+++ b/ltt/templates/inquiry.html
@@ -12,26 +12,37 @@
   {% endif %}
 {% endwith %}
 
-
+{%if current_user.userType == "Customer"%}
 <h1>Make Inquiry</h1>
 <div class = "container">
     <form method="POST" class = "form-register">
         {{form.hidden_tag()}}
+        {{form.purchase_.label()}}
+        {{form.purchase_(class="form-control", placeholder = "Password" )}}
+        
         {{form.submit(class="btn btn-lg btn-block btn-primary mt-2")}}
     </form>
 </div>
-
+{%endif%}
 <table class = "table table-hover">
-    <tbody>
-      {%for inquirys in inquiry_to_show%}
-      <tr>
-        <td>{{inquirys.id}}</td>
-        <td>{{inquirys.purchase_id}}</td>
-        <td>{{inquirys.employee_id}}</td>
-      </tr>
+  <tbody>
+    {%if current_user.userType == "Employee"%}
+      {%for inquiry in inquiries_to_show_employee%}
+        <tr>
+          <td><a href = "{{ '/inquirypage/%s'%inquiry.id }}">{{inquiry.id}}</a></td>
+        </tr>
       {%endfor%}
-    </tbody>
-  </table>
+    {%elif current_user.userType == "Customer"%}
+      {%for inquiry in inquiries_to_show_customer%}
+        <tr>
+          <td><a href = "{{ '/inquirypage/%s'%inquiry.id }}">{{inquiry.id}}</a></td>
+        </tr>
+        {%endfor%}
+    {%endif%}
+
+  </tbody>
+</table>
+
 
 
 {% endblock %}
