delete pc will give warning to staff

--- a/ltt/templates/prebulid.html
+++ b/ltt/templates/prebulid.html
@@ -32,6 +32,7 @@
             <td>{{rate}}</td>
             {% endif %}
             <td><a href="/buy/{{p.id}}">BUY</a></td>
+            <td><a href="/deletepc/{{p.id}}">delete</a></td>
         </tr>
         {% endfor %}
     </tbody>
